--- a/frontend/src/css-stylings/NoBSHome.css
+++ b/frontend/src/css-stylings/NoBSHome.css
@@ -1,10 +1,5 @@
-* {
-    margin: 0;
-    padding: 0;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  }
-  
-  .main {
+
+ .main {
     width: 100%;
     height: 100vh;
   }
@@ -13,36 +8,8 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    /*You uncomment the code below here and our unlock your potential text lays on top of the vide */ 
+    position: absolute; /* Change position to absolute */ /*Deleting this will take the text from off teh video */
+    top: 50px; /* Adjust the value to match the height of your navbar */
+    left: 0; 
   }
-  .video-player-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-  }
-  
-  .video-player {
-    position: relative;
-  }
-  
-  .video-player video {
-    max-width: 100%;
-    max-height: 100%;
-    width: auto;
-    height: auto;
-  }
-  
-  
-  .content {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-  }
-  
